# Agent-Native-Cloud-Development

FastAPI/dependency_injection/: main.py  pyproject.toml
FastAPI/fastapi-helloworld/: pyproject.toml
FastAPI/fastapi-helloworld/src/fastapi_helloworld/: __init__.py  hello.py  main.py  test_hello_message.py
FastAPI/fastapi_api_parameters/: pyproject.toml
FastAPI/fastapi_api_parameters/src/fastapi_api_parameters/: __init__.py  main.py
FastAPI/fastapi_pydantic/: pyproject.toml
FastAPI/fastapi_pydantic/src/fastapi_pydantic/: __init__.py  main.py  test_main.py
FastAPI/openai_agents_sdk_with_fast_api/: main.py
FastAPI/zero-to-hero/: .env  creating_tables.py  database_eg.py  dep.py  main.py  pyproject.toml  test_file.py
FastAPI/zero-to-hero/.claude/: settings.local.json
FastAPI/zero-to-hero/.claude/skills/fastapi-skill/: SKILL.md
FastAPI/zero-to-hero/.claude/skills/nextjs-skill/: SKILL.md
FastAPI/zero-to-hero/.claude/skills/skill-creator-enhanced/: SKILL.md
FastAPI/zero-to-hero/.claude/skills/skill-creator-enhanced/references/: skill-patterns.md
